opam-version: "2.0"
maintainer: "Edgar Aroutiounian <edgar.factorial@gmail.com>"
authors: "Edgar Aroutiounian <edgar.factorial@gmail.com>"
homepage: "https://github.com/fxfactorial/valentine"
bug-reports: "https://github.com/fxfactorial/valentine/issues"
license: "BSD-3-Clause"
dev-repo: "git+https://github.com/fxfactorial/valentine.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "1.11"}
  "cmdliner" {build}
  "markup" {build}
]
synopsis: "Validate HTML from command line"
description: "Simple tool to validate HTML according to spec"
